tests/integration/snapshots/tests__integration__header_generator_tests__header_generator_cli.snap
---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(dir.path().join(\"colour_tracker.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef COLOUR_TRACKER
#define COLOUR_TRACKER

#include <dependencies.plc.h>

typedef enum eRGB {
    red = 0,
    green,
    blue
} RGB;

typedef struct {
    int32_t timesPicked;
    RGB primaryColour;
} ColourInfo;

extern int16_t globalCounter;

void PrintStatistics(int32_t argumentCount, ColourInfo* colours);

void TestPrinter();

void PrintColourInfo(ColourInfo* colourInfo);

#endif /* !COLOUR_TRACKER */
