tests/integration/snapshots/tests__integration__header_generator_tests__header_generator_library_file.snap
---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(dir.path().join(\"file.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef FILE
#define FILE

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef uint8_t* FILE_Handle;

typedef uint32_t FILE_Mode;

typedef int32_t FILE_Permission;

typedef enum eFILE_AccessMode {
    FILE_AccessMode_Read = 0,
    FILE_AccessMode_Write,
    FILE_AccessMode_Append,
    FILE_AccessMode_ReadPlus,
    FILE_AccessMode_WritePlus,
    FILE_AccessMode_AppendPlus
} FILE_AccessMode;

typedef enum eFILE_SeekOrigin {
    FILE_SeekOrigin_Begin = 0,
    FILE_SeekOrigin_Current,
    FILE_SeekOrigin_End
} FILE_SeekOrigin;

typedef enum eFILE_Type {
    FILE_Type_Unknown = 0,
    FILE_Type_Regular,
    FILE_Type_Directory,
    FILE_Type_CharDevice,
    FILE_Type_BlockDevice,
    FILE_Type_FIFO,
    FILE_Type_Socket,
    FILE_Type_SymLink
} FILE_Type;

typedef struct {
    FILE_Type FileType;
    FILE_Permission Permissions;
    uint32_t Uid;
    uint32_t Gid;
    uint64_t Size;
    time_t LastAccess;
    time_t LastModified;
    time_t LastStatusChange;
} FILE_Status;

FILE_Handle FILE_Open(char* File, FILE_AccessMode Mode, ErrorCode* Error);

void FILE_Close(ErrorCode* FILE_Close, FILE_Handle FileHandle);

uint64_t FILE_Read(FILE_Handle FileHandle, uint8_t* Buffer, uint64_t Size, ErrorCode* Error);

uint64_t FILE_Write(FILE_Handle FileHandle, uint8_t* Buffer, uint64_t Size, ErrorCode* Error);

void FILE_Seek(ErrorCode* FILE_Seek, FILE_Handle FileHandle, int64_t Offset, FILE_SeekOrigin Origin);

int64_t FILE_Tell(FILE_Handle FileHandle, ErrorCode* Error);

void FILE_ReadString(char* FILE_ReadString, FILE_Handle FileHandle, bool* IsEOF, ErrorCode* Error);

void FILE_WriteString(ErrorCode* FILE_WriteString, FILE_Handle FileHandle, char* Str);

void FILE_Flush(ErrorCode* FILE_Flush, FILE_Handle FileHandle);

void FILE_GetStatus(ErrorCode* FILE_GetStatus, FILE_Handle FileHandle, FILE_Status* Status);

void FILE_Copy(ErrorCode* FILE_Copy, char* Source, char* Destination, uint64_t* BytesCopied);

void FILE_Rename(ErrorCode* FILE_Rename, char* OldName, char* NewName);

void FILE_Remove(ErrorCode* FILE_Remove, char* FileName);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !FILE */
