tests/integration/snapshots/tests__integration__header_generator_tests__header_generator_library_log.snap
---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(dir.path().join(\"log.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef LOG
#define LOG

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef enum eLogLevel {
    LOG_LEVEL_EMERGENCY = 0,
    LOG_LEVEL_ALERT = 1,
    LOG_LEVEL_CRITICAL = 2,
    LOG_LEVEL_ERROR = 3,
    LOG_LEVEL_WARNING = 4,
    LOG_LEVEL_NOTICE = 5,
    LOG_LEVEL_INFO = 6,
    LOG_LEVEL_DEBUG = 7,
    LOG_LEVEL_INHERIT = -1
} LogLevel;

void Log_Print(ErrorCode* Log_Print, LogLevel Priority, char* Format, ...);

void Log_Send(ErrorCode* Log_Send, LogLevel Priority, char* Format, ...);

void Log_SetRootLevel(ErrorCode* Log_SetRootLevel, LogLevel Priority);

LogLevel Log_GetRootLevel();

void Log_SetLevel(ErrorCode* Log_SetLevel, LogLevel Priority);

LogLevel Log_GetLevel();

bool Log_IsEnabled(LogLevel Priority);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !LOG */
