tests/integration/snapshots/tests__integration__header_generator_tests__header_generator_library_time.snap
---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(dir.path().join(\"time.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef TIME
#define TIME

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef enum eTIME_CLOCKID {
    TIME_CLOCK_REALTIME = 0,
    TIME_CLOCK_MONOTONIC = 1
} TIME_CLOCKID;

typedef struct {
    int32_t Sec;
    int32_t Min;
    int32_t Hour;
    int32_t Day;
    int32_t Month;
    int32_t Year;
    int32_t Wday;
    int32_t Yday;
    int32_t Isdst;
    int32_t Gmtoff;
    char Zone[64];
} TIME_SYSTIMEDATE;

typedef struct {
    int64_t TvSec;
    int32_t TvNsec;
} TIME_TIMESPEC;

uint64_t TIME_GetMonotonic();

uint64_t TIME_GetMonotonicMillis();

uint64_t TIME_GetMonotonicSeconds();

uint64_t TIME_GetRealtime();

uint64_t TIME_GetRealtimeMillis();

uint64_t TIME_GetRealtimeSeconds();

void TIME_ClockGetTime(ErrorCode* TIME_ClockGetTime, TIME_CLOCKID ClockId, TIME_TIMESPEC* Time);

void TIME_ClockSetTime(ErrorCode* TIME_ClockSetTime, TIME_CLOCKID ClockId, TIME_TIMESPEC Time);

void TIME_GetTimezone(char* TIME_GetTimezone, ErrorCode* Error);

void TIME_SetTimezone(ErrorCode* TIME_SetTimezone, char* Timezone);

int32_t TIME_GetTimezoneOffset();

void TIME_TimestampToSysTimeDate(ErrorCode* TIME_TimestampToSysTimeDate, uint64_t Timestamp, TIME_SYSTIMEDATE* SysTimeDate);

void TIME_TimestampToLocalSysTimeDate(ErrorCode* TIME_TimestampToLocalSysTimeDate, uint64_t Timestamp, TIME_SYSTIMEDATE* SysTimeDate);

void TIME_SysTimeDateToTimestamp(ErrorCode* TIME_SysTimeDateToTimestamp, TIME_SYSTIMEDATE SysTimeDate, uint64_t* Timestamp);

void TIME_FormatString(ErrorCode* TIME_FormatString, TIME_SYSTIMEDATE SysTimeDate, char* Format, char* Str);

void TIME_ParseString(ErrorCode* TIME_ParseString, char* Format, char* Str, TIME_SYSTIMEDATE* SysTimeDate);

void TIME_IsClockSynchronized(ErrorCode* TIME_IsClockSynchronized, bool* InSync);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !TIME */
