tests/integration/snapshots/tests__integration__header_generator_tests__header_generator_library_vpool.snap
---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(dir.path().join(\"vpool.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef VPOOL
#define VPOOL

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef uint8_t* VPOOL_Handle;

typedef enum eVPOOL_Flags {
    VPOOL_Flags_ReadOnly = 0,
    VPOOL_Flags_WriteOnly = 1,
    VPOOL_Flags_ReadWrite = 2,
    VPOOL_Flags_Attr = 4096,
    VPOOL_Flags_Force = 8192,
    VPOOL_Flags_Exclusive = 128
} VPOOL_Flags;

typedef enum eVPOOL_Type {
    VPOOL_Type_Null = 0,
    VPOOL_Type_Bool = 1,
    VPOOL_Type_Int8 = 2,
    VPOOL_Type_Int16 = 3,
    VPOOL_Type_Int32 = 4,
    VPOOL_Type_Int64 = 5,
    VPOOL_Type_Uint8 = 6,
    VPOOL_Type_Uint16 = 7,
    VPOOL_Type_Uint32 = 8,
    VPOOL_Type_Uint64 = 9,
    VPOOL_Type_Real32 = 10,
    VPOOL_Type_Real64 = 11,
    VPOOL_Type_String = 12,
    VPOOL_Type_Datetime = 13,
    VPOOL_Type_Blob = 14
} VPOOL_Type;

typedef enum eVPOOL_Options {
    VPOOL_Option_None = 0,
    VPOOL_Option_Timestamp = 1,
    VPOOL_Option_Status = 2
} VPOOL_Options;

typedef enum eVPOOL_Mode {
    VPOOL_Mode_ReadOnly = 0,
    VPOOL_Mode_WriteOnly = 1,
    VPOOL_Mode_ReadWrite = 2
} VPOOL_Mode;

typedef struct {
    VPOOL_Type Datatype;
    uint32_t Size;
    VPOOL_Mode Mode;
    VPOOL_Options Options;
    uint32_t ElementCount;
    uint32_t Dimensions[3];
} VPOOL_Attributes;

VPOOL_Handle VPOOL_Pv_Open(char* Name, VPOOL_Flags Flags, ErrorCode* Error);

void VPOOL_Pv_Close(ErrorCode* VPOOL_Pv_Close, VPOOL_Handle PvHandle);

bool VPOOL_Pv_IsValid(VPOOL_Handle PvHandle);

void VPOOL_Pv_GetName(char* VPOOL_Pv_GetName, VPOOL_Handle PvHandle, ErrorCode* Error);

void VPOOL_Pv_Read(ErrorCode* VPOOL_Pv_Read, VPOOL_Handle PvHandle, uint8_t* Data, int32_t Size);

bool VPOOL_Pv_Read_BOOL(VPOOL_Handle PvHandle, ErrorCode* Error);

int8_t VPOOL_Pv_Read_SINT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint8_t VPOOL_Pv_Read_USINT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint8_t VPOOL_Pv_Read_BYTE(VPOOL_Handle PvHandle, ErrorCode* Error);

int16_t VPOOL_Pv_Read_INT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint16_t VPOOL_Pv_Read_UINT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint16_t VPOOL_Pv_Read_WORD(VPOOL_Handle PvHandle, ErrorCode* Error);

int32_t VPOOL_Pv_Read_DINT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint32_t VPOOL_Pv_Read_UDINT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint32_t VPOOL_Pv_Read_DWORD(VPOOL_Handle PvHandle, ErrorCode* Error);

int64_t VPOOL_Pv_Read_LINT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint64_t VPOOL_Pv_Read_ULINT(VPOOL_Handle PvHandle, ErrorCode* Error);

float_t VPOOL_Pv_Read_REAL(VPOOL_Handle PvHandle, ErrorCode* Error);

double_t VPOOL_Pv_Read_LREAL(VPOOL_Handle PvHandle, ErrorCode* Error);

time_t VPOOL_Pv_Read_DT(VPOOL_Handle PvHandle, ErrorCode* Error);

uint8_t VPOOL_Pv_Read_CHAR(VPOOL_Handle PvHandle, ErrorCode* Error);

void VPOOL_Pv_Read_STRING(char* VPOOL_Pv_Read_STRING, VPOOL_Handle PvHandle, uint8_t Length, ErrorCode* Error);

void VPOOL_Pv_Write(ErrorCode* VPOOL_Pv_Write, VPOOL_Handle PvHandle, uint8_t* Data, int32_t Size);

void VPOOL_Pv_Write_BOOL(ErrorCode* VPOOL_Pv_Write_BOOL, VPOOL_Handle PvHandle, bool Value);

void VPOOL_Pv_Write_SINT(ErrorCode* VPOOL_Pv_Write_SINT, VPOOL_Handle PvHandle, int8_t Value);

void VPOOL_Pv_Write_USINT(ErrorCode* VPOOL_Pv_Write_USINT, VPOOL_Handle PvHandle, uint8_t Value);

void VPOOL_Pv_Write_BYTE(ErrorCode* VPOOL_Pv_Write_BYTE, VPOOL_Handle PvHandle, uint8_t Value);

void VPOOL_Pv_Write_INT(ErrorCode* VPOOL_Pv_Write_INT, VPOOL_Handle PvHandle, int16_t Value);

void VPOOL_Pv_Write_UINT(ErrorCode* VPOOL_Pv_Write_UINT, VPOOL_Handle PvHandle, uint16_t Value);

void VPOOL_Pv_Write_WORD(ErrorCode* VPOOL_Pv_Write_WORD, VPOOL_Handle PvHandle, uint16_t Value);

void VPOOL_Pv_Write_DINT(ErrorCode* VPOOL_Pv_Write_DINT, VPOOL_Handle PvHandle, int32_t Value);

void VPOOL_Pv_Write_UDINT(ErrorCode* VPOOL_Pv_Write_UDINT, VPOOL_Handle PvHandle, uint32_t Value);

void VPOOL_Pv_Write_DWORD(ErrorCode* VPOOL_Pv_Write_DWORD, VPOOL_Handle PvHandle, uint32_t Value);

void VPOOL_Pv_Write_LINT(ErrorCode* VPOOL_Pv_Write_LINT, VPOOL_Handle PvHandle, int64_t Value);

void VPOOL_Pv_Write_ULINT(ErrorCode* VPOOL_Pv_Write_ULINT, VPOOL_Handle PvHandle, uint64_t Value);

void VPOOL_Pv_Write_REAL(ErrorCode* VPOOL_Pv_Write_REAL, VPOOL_Handle PvHandle, float_t Value);

void VPOOL_Pv_Write_LREAL(ErrorCode* VPOOL_Pv_Write_LREAL, VPOOL_Handle PvHandle, double_t Value);

void VPOOL_Pv_Write_DT(ErrorCode* VPOOL_Pv_Write_DT, VPOOL_Handle PvHandle, time_t Value);

void VPOOL_Pv_Write_CHAR(ErrorCode* VPOOL_Pv_Write_CHAR, VPOOL_Handle PvHandle, uint8_t Value);

void VPOOL_Pv_Write_STRING(ErrorCode* VPOOL_Pv_Write_STRING, VPOOL_Handle PvHandle, char* Value, uint8_t Length);

void VPOOL_Pv_GetAttributes(VPOOL_Attributes* VPOOL_Pv_GetAttributes, VPOOL_Handle PvHandle, ErrorCode* Error);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !VPOOL */
