tests/integration/snapshots/tests__integration__header_generator_tests__header_generator_output_directory.snap
---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(gen_dir.join(\"colour_tracker.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef COLOUR_TRACKER
#define COLOUR_TRACKER

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef enum eRGB {
    red = 0,
    green,
    blue
} RGB;

typedef struct {
    int32_t timesPicked;
    RGB primaryColour;
} ColourInfo;

extern int16_t globalCounter;

void PrintStatistics(int32_t argumentCount, ColourInfo* colours);

void TestPrinter();

void PrintColourInfo(ColourInfo* colourInfo);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !COLOUR_TRACKER */
